--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -6,7 +6,7 @@
       "name": "EDA.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM34cMev+2J6bBQnGmnE62f",
+      "authorship_tag": "ABX9TyPh+IvUm32kar1au4Qq2vbS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +50,8 @@
         "import numpy as np\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns"
+        "import seaborn as sns\n",
+        "import sklearn"
       ],
       "execution_count": null,
       "outputs": [
@@ -81,7 +82,7 @@
         "df = pd.read_excel('/Online Retail.xlsx')\n",
         "df.head()"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -207,7 +208,7 @@
       "source": [
         "df.info()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -254,7 +255,7 @@
       "source": [
         "df['CustomerID'] = df['CustomerID'].astype('object')"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -269,7 +270,7 @@
         "df_null_desc['UnitPrice'].sum()\n",
         "df.dropna(subset=['Description'],inplace=True)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -292,11 +293,11 @@
       "source": [
         "df_null_custID = df.loc[df.CustomerID.isnull()]\n",
         "df_null_custID['UnitPrice'].sum()\n",
-        "df_null_custID.shape\n",
+        "# df_null_custID.shape\n",
         "# df_null_custID.CustomerID.unique()\n",
         "df['CustomerID'] = df['CustomerID'].fillna('UNKNOWN')"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -319,11 +320,11 @@
       "source": [
         "## check for duplicates\n",
         "df_duplicate = df.loc[df.duplicated() == True]\n",
-        "df_duplicate.shape\n",
+        "# df_duplicate.shape\n",
         "# drop duplicated and keep only one occurence\n",
         "df.drop_duplicates(keep = 'first',inplace=True)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -340,7 +341,7 @@
       "source": [
         "df.describe()"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -444,7 +445,7 @@
         "Invalid_df = df.loc[(df.Quantity < 1) | (df.UnitPrice < 0)]\n",
         "df.drop(Invalid_df.index,inplace=True)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -471,7 +472,7 @@
       "source": [
         "df.describe()"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -579,7 +580,7 @@
         "top10_buyer=df.CustomerID.value_counts()[1:10]\n",
         "top10_buyer.plot(kind='bar')"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -628,7 +629,7 @@
         "})\n",
         "buyer_group"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -750,7 +751,7 @@
         "top_product=df.StockCode.value_counts()[:20]\n",
         "top_product.plot(kind='bar')"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -796,7 +797,7 @@
         "})\n",
         "product_group"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -935,7 +936,7 @@
         "\n",
         "pyoff.init_notebook_mode()\n"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1008,7 +1009,7 @@
         "    fig = go.Figure(data=plot_data, layout=plot_layout)\n",
         "    pyoff.iplot(fig)"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1031,7 +1032,7 @@
         "                        'Revenue': sum}).reset_index()\n",
         "df_revenue"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1168,7 +1169,7 @@
         "##visualize revenue details\n",
         "plot_rev(df_revenue, 'InvoiceYearMonth', 'Revenue', 'category', 'Montly Revenue')"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2097,7 +2098,7 @@
         "df_revenue['MonthlyGrowth'] = df_revenue['Revenue'].pct_change()\n",
         "df_revenue.head()"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2193,7 +2194,7 @@
         "y=df_revenue.query(\"InvoiceYearMonth < 201112\")['MonthlyGrowth']\n",
         "query_plot(x, y, 'category', 'Monthly Growth Rate')"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3114,7 +3115,7 @@
         "#Creating monthly active customers dataframe for UK\n",
         "df_uk = df.query(\"Country=='United Kingdom'\").reset_index(drop=True)"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3132,7 +3133,7 @@
         "df_monthly_active = df_uk.groupby('InvoiceYearMonth')['CustomerID'].nunique().reset_index()\n",
         "df_monthly_active"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3269,7 +3270,7 @@
         "plot_rev(df_monthly_active, 'InvoiceYearMonth', 'CustomerID',\n",
         "         'category', 'Monthly Active Customers', go.Bar)"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4197,7 +4198,7 @@
         "df_monthly_orders = df_uk.groupby('InvoiceYearMonth')['Quantity'].sum().reset_index()\n",
         "df_monthly_orders"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4334,7 +4335,7 @@
         "plot_rev(df_monthly_orders, 'InvoiceYearMonth', 'Quantity',\n",
         "         'category', 'Monthly Orders', go.Bar)"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5262,7 +5263,7 @@
         "df_monthly_revenue = df_uk.groupby('InvoiceYearMonth')['Revenue'].mean().reset_index()\n",
         "df_monthly_revenue"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5399,7 +5400,7 @@
         "plot_rev(df_monthly_revenue, 'InvoiceYearMonth', 'Revenue',\n",
         "         'category', 'Monthly Orders', go.Bar)"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6328,7 +6329,7 @@
         "df_min_purchase['MinPurchaseYearMonth'] = df_min_purchase['MinPurchaseDate'].map(lambda date: 100*date.year + date.month)\n",
         "df_min_purchase.head()"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6424,7 +6425,7 @@
         "df_uk = pd.merge(df_uk, df_min_purchase, on=\"CustomerID\")\n",
         "df_uk.head()"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6578,7 +6579,7 @@
         "df_uk['UserType'] = 'New'\n",
         "df_uk.loc[df_uk['InvoiceYearMonth']>df_uk['MinPurchaseYearMonth'],'UserType'] = 'Existing'"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6598,7 +6599,7 @@
         "df_user_type_revenue = df_user_type_revenue.query(\"InvoiceYearMonth != 201012 and InvoiceYearMonth != 201112\")\n",
         "df_user_type_revenue"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6813,7 +6814,7 @@
         "y=df_user_type_revenue.query(\"UserType == 'Existing'\")['Revenue']\n",
         "query_plot(x, y, \"category\", 'New vs Existing')"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -7739,7 +7740,7 @@
         "df_user_ratio = df_user_ratio.dropna()\n",
         "df_user_ratio"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7881,7 +7882,7 @@
         "fig = go.Figure(data=plot_data, layout=plot_layout)\n",
         "pyoff.iplot(fig)"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -8804,7 +8805,7 @@
         "df_user_purchase = df_uk.groupby(['CustomerID','InvoiceYearMonth'])['Revenue'].sum().reset_index()\n",
         "df_user_purchase"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8944,7 +8945,7 @@
         "df_retention = pd.crosstab(df_user_purchase['CustomerID'], df_user_purchase['InvoiceYearMonth']).reset_index()\n",
         "df_retention.head()"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9108,7 +9109,7 @@
         "months = df_retention.columns[2:]\n",
         "months"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9150,7 +9151,7 @@
         "    \n",
         "retention_array"
       ],
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9197,7 +9198,7 @@
         "df_retention = pd.DataFrame(retention_array)\n",
         "df_retention.head()"
       ],
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9292,7 +9293,7 @@
         "df_retention['RetentionRate'] = df_retention['RetainedUserCount']/df_retention['TotalUserCount']\n",
         "df_retention"
       ],
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9454,7 +9455,7 @@
         "fig = go.Figure(data=plot_data, layout=plot_layout)\n",
         "pyoff.iplot(fig)"
       ],
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
